[workspace]
members = [
    "cli",
    "cron",
    "plugin",
    "programs/*",
    "relayer",
    "sdk",
    "utils"
]

[profile.release]
overflow-checks = true

[patch.crates-io]
anchor-lang = { git = "https://github.com/rpcpool/anchor", branch = "clockwork-1.17" }
anchor-spl = { git = "https://github.com/rpcpool/anchor", branch = "clockwork-1.17", features = ["mint", "token"] }
pyth-sdk-solana = { git = "https://github.com/rpcpool/pyth-sdk-rs", branch = "clockwork-1.17" }
